[package]
name = "remote-access"
version = "0.1.0"
edition = "2021"
description = "Minimal-intervention TCP/UDP port forwarding through a public relay (QUIC or TCP transport)"

[[bin]]
name = "remote-access"
path = "src/main.rs"

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
quinn = "0.11"
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
